[package]
name = "coinwagon"
version = "0.1.0"
edition = "2024"

[lib]
name = "coinwagon"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
dashmap = "5.5"
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt", "macros"] }
